# MNIST-with-Tolerance-Maps

./: .gitignore  LICENSE  README.md  build.gradle  local-template.properties  settings.gradle
Apps/Android/: build.gradle
Apps/Android/app/src/main/res/layout/: activity_main.xml
Apps/Android/app/src/main/res/menu/: menu_main.xml
Apps/Android/app/src/test/java/com/keithpinson/mnistwithtolerancemaps/: ExampleUnitTest.java
Apps/Android/jni/: Android.mk
Apps/Android/src/androidTest/java/com/keithpinson/mnistwithtolerancemaps/: ApplicationTest.java
Apps/Android/src/main/: AndroidManifest.xml
Apps/Android/src/main/cpp/: CMakeLists.txt  mnist-torch.cpp
Apps/Android/src/main/java/com/keithpinson/mnistwithtolerancemaps/: MainActivity.java  Mnist.java  MnistActivity.java  MnistAltStyles.java  MnistPrefs.java  MnistTolMap.java
Apps/Android/src/main/res/drawable/: ic_menu_refresh.xml
Apps/Android/src/main/res/layout/: action_bar_checkbox_style.xml  activity_main.xml  activity_mnist.xml  content_main.xml  content_mnist.xml
Apps/Android/src/main/res/menu/: drawer_header.xml  menu_main.xml  menu_mnist.xml
Apps/Android/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
Apps/Android/src/main/res/xml/: preferences.xml
gen-torch/: build.gradle
gen-torch/src/main/: AndroidManifest.xml
gen-torch/src/main/cpp/: CMakeLists.txt
gen-torch/src/main/cpp/lua/: CMakeLists.txt
gen-torch/src/main/cpp/lua/src/: landroidconf.c  landroidconf.h  lapi.c  lauxlib.c  lbaselib.c  lcode.c  lcorolib.c  ldblib.c  ldebug.c  ldo.c  lgc.c  liolib.c  llex.c  lmathlib.c  loadlib.c  lobject.c  loslib.c  lparser.c  lstate.c  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  luaconf.h  lundump.c  lutf8lib.c  lvm.c  lzio.c
gen-torch/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
